# E2EJobRecommender

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  sample_resume.txt  setup.py  test.http
.github/workflows/: main.yaml
app/: __main__.py  main.py  trial.py
app/cache/: __init__.py  jobs_cache.py  keywords_cache.py  resume_cache.py  suggestions_cache.py
app/model/: ask_llm.py  llm.py
app/routers/: __init__.py  job_recommendation.py  suggestions.py
app/services/: redis_config.py  session_manager.py
app/templates/: home.html  jobs.html  suggestion.html
artifacts/: linkedin(update).json  linkedin.json  naukri.json  suggestion.json
notebooks/: analyze_job_result.ipynb  analyze_suggestion_result.ipynb  chain_model.ipynb  parallel_chains.ipynb  structured_output.ipynb
prompts/: finding_skill_gap_prompt.txt  keyword_prompt.txt  project_ideas_prompt.txt  summary_prompt.txt  wycd_prompt.txt
src/jobRecommender/api/: __init__.py  linkedin.py  naukri.py
src/jobRecommender/chains/: llm_chain.py
src/jobRecommender/mcp/: mcp_server.py
src/jobRecommender/models/: llm_model.py
src/jobRecommender/prompts/: finding_skill_gap_prompt.txt  keyword_prompt.txt  summary_prompt.txt  wycd_prompt.txt
src/jobRecommender/utils/: helper.py
src/job_recommender/: __init__.py
src/job_recommender/api/: __init__.py  linkedin.py  naukri.py
src/job_recommender/chains/: llm_chain.py
src/job_recommender/mcp/: mcp_server.py
src/job_recommender/models/: llm_model.py
src/job_recommender/utils/: helper.py
(+7 files in other folders)
